
La versione 3.9.55 è disponibile per la modalità standard e la modalità limitata.



=== Supporto per la lingua giapponese

L'interfaccia utente BlueXP è ora disponibile in lingua giapponese.  Se la lingua del tuo browser è il giapponese, BlueXP verrà visualizzato in giapponese.  Per accedere alla documentazione in giapponese, utilizzare il menu della lingua sul sito web della documentazione.



=== Gestione delle identità e degli accessi (IAM, Identity and Access Management) di BlueXP 

La gestione delle identità e degli accessi in BlueXP ora offre la seguente funzionalità.



=== Nuovo ruolo di accesso per il supporto operativo

BlueXP ora supporta il ruolo di analista di supporto operativo.  Questo ruolo concede all'utente le autorizzazioni per monitorare gli avvisi di archiviazione, visualizzare la cronologia degli audit BlueXP e inserire e tenere traccia dei casi di supporto NetApp .

link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Scopri di più sull'utilizzo dei ruoli di accesso."]



== 31 luglio 2025



=== Rilascio della modalità privata (3.9.54)

È ora disponibile una nuova versione in modalità privata da scaricare da https://mysupport.netapp.com/site/downloads["Sito di supporto NetApp"^]

La versione 3.9.54 include aggiornamenti ai seguenti componenti e servizi BlueXP .

[cols="3*"]
|===
| Componente o servizio | Versione inclusa in questa release | Cambia dalla precedente versione in modalità privata 


| Connettore | 3.9.54, 3.9.53 | Vai al https://docs.netapp.com/us-en/bluexp-setup-admin/whats-new.html#connector-3-9-50["novità nella pagina BlueXP"^] e fare riferimento alle modifiche incluse per le versioni 3.9.54 e 3.9.53. 


| Backup e recovery | 28 luglio 2025 | Vai al https://docs.netapp.com/us-en/bluexp-backup-recovery/whats-new.html["Novità della pagina di backup e ripristino di BlueXP"^] e fare riferimento alle modifiche incluse nella versione di luglio 2025. 

